[gd_scene load_steps=53 format=2]

[ext_resource path="res://Player/Scripts/PlayerBody.gd" type="Script" id=1]
[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Tank.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Sprites/VacuumScreen.png" type="Texture" id=4]
[ext_resource path="res://Player/Sprites/HoseSegment.png" type="Texture" id=5]
[ext_resource path="res://Player/Scripts/PlayerSprite.gd" type="Script" id=6]
[ext_resource path="res://Player/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/Sprites/Vacuum.png" type="Texture" id=8]
[ext_resource path="res://Player/Scripts/PlayerScreen.gd" type="Script" id=9]
[ext_resource path="res://Player/Sounds/vacuum_complete.wav" type="AudioStream" id=10]
[ext_resource path="res://Player/Scripts/VacuumNoise.gd" type="Script" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 4.50197

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "HoverSpent",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "HoverLoop",
"speed": 12.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Default",
"speed": 4.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Sucking",
"speed": 15.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Hover",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 22 ) ],
"loop": false,
"name": "happy",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "doubleblink",
"speed": 12.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 28 ) ],
"loop": true,
"name": "Nblink",
"speed": 12.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "blink",
"speed": 12.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "XD",
"speed": 2.0
}, {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "neutral",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 36 ), SubResource( 37 ), SubResource( 36 ) ],
"loop": true,
"name": "Ndoubleblink",
"speed": 12.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "hurt",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=41]
radius = 14.1084
height = 10.5004

[node name="Player" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerBody" type="KinematicBody2D" parent="." groups=[
"Player",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="Hose" type="Node2D" parent="PlayerBody"]
__meta__ = {
"_edit_lock_": true
}

[node name="HoseStart" type="StaticBody2D" parent="PlayerBody/Hose"]
position = Vector2( 0, -20 )
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody/Hose/HoseStart"]
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="PlayerBody/Hose"]
points = PoolVector2Array( 181.375, -62.5672 )
width = 8.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 5 )
texture_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSprite" type="AnimatedSprite" parent="PlayerBody"]
frames = SubResource( 21 )
animation = "HoverSpent"
playing = true
script = ExtResource( 6 )

[node name="PlayerScreen" type="AnimatedSprite" parent="PlayerBody/PlayerSprite"]
frames = SubResource( 40 )
animation = "XD"
frame = 1
playing = true
offset = Vector2( 0, 1 )
script = ExtResource( 9 )

[node name="NewAnimation" type="Timer" parent="PlayerBody/PlayerSprite/PlayerScreen"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="GroundNormal" type="RayCast2D" parent="PlayerBody"]
visible = false
enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
visible = false
position = Vector2( 0.445465, -0.222725 )
shape = SubResource( 41 )

[node name="HoseConnection" type="PinJoint2D" parent="PlayerBody"]
visible = false
position = Vector2( 0, -26 )
node_a = NodePath("..")
node_b = NodePath("../Node2D/HoseBase")
bias = 0.722
softness = 1.4
__meta__ = {
"_edit_lock_": true
}

[node name="InputDelay" type="Timer" parent="PlayerBody"]
wait_time = 0.1
one_shot = true

[node name="HoverTimer" type="Timer" parent="PlayerBody"]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tank" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 767.693, 47.6663 )

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
script = ExtResource( 11 )
[connection signal="animation_finished" from="PlayerBody/PlayerSprite" to="PlayerBody/PlayerSprite" method="_on_PlayerSprite_animation_finished"]
[connection signal="timeout" from="PlayerBody/PlayerSprite/PlayerScreen/NewAnimation" to="PlayerBody/PlayerSprite/PlayerScreen" method="_on_NewAnimation_timeout"]
[connection signal="timeout" from="PlayerBody/HoverTimer" to="PlayerBody" method="_on_HoverTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_AudioStreamPlayer_finished"]
